<resources>
    <string name="app_name">Latihan 12</string>
    <string name="bg">Main Background</string>
    <string name="textmainJudul">Program Absen</string>
    <string name="textsubJudul">List Nama Mahasiswa</string>
    <!--Activity ABSEN-->
    <string name="imgabsenbg">Absen Background</string>
    <string name="textabjudul">Program Absen</string>
    <string name="textabjam">Jam Masuk</string>
    <string name="textabtgl">Tanggal Masuk</string>
    <string name="imgabcalender">Icon Calendar</string>
    <string name="btnsubmit">Submit</string>
    <string name="imgabjam">Icon Clock</string>
    <string name="my_profile">Profile Saya</string>
    <string name="imageheader">imgHeader</string>
    <string name="info">Information</string>
    <string name="fab">floatingbtn</string>
    <string name="lableNama">Nama</string>
    <string name="titik2">:</string>
    <string name="nama">M. Dwiyan Hartono</string>
    <string name="lableNIM">NIM</string>
    <string name="nim">3420160144</string>
    <string name="actionlanguage">Atur Bahasa</string>
</resources>